--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section
       id="Hero"
       class="relative w-full h-screen bg-cover bg-center"
-      style="background-image: url('../public/krti_photo.webp')"
+      style="background-image: url('public/krti_photo.webp')"
     >
       <div class="absolute inset-0 bg-black opacity-60"></div>
       <div
@@ -112,7 +112,7 @@
           <div class="w-full self-end pr-8 lg:w-1/2">
             <div class="relative mt-10 lg:mt-0 lg:right-0">
               <img
-                src="../public/bayu1.webp"
+                src="public/bayu1.webp"
                 alt="Dzaky Ahnaf"
                 class="max-w-full mx-auto"
               />
@@ -128,7 +128,7 @@
           <div class="w-full self-end px-0 pr-10 lg:w-1/2">
             <div class="relative mt-10 lg:mt-0 lg:right-0">
               <img
-                src="../public/bayu4.webp "
+                src="public/bayu4.webp "
                 alt=""
                 class="max-w-full mx-auto z-50"
               />
@@ -169,7 +169,7 @@
           class="flex items-center justify-center mb-5 text-2xl font-semibold text-white"
         >
           <img
-            src="../public/bayucaraka logos.webp"
+            src="public/bayucaraka logos.webp"
             class="h-12 mr-3 sm:h-9"
             alt=""
           />
